[Java] Fix hints